--- a/style.css
+++ b/style.css
@@ -160,6 +160,7 @@ body {
   #text {
     font-size: 1.1em;
     margin: 0;
+    margin-left: 20px;
     max-width: 100px;
     min-width: 300px;
   }
